--- a/src/app/calendar/appointment-modal/appointment-modal.component.html
+++ b/src/app/calendar/appointment-modal/appointment-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create Appointment</h2>
+<h2 mat-dialog-title>{{ isEditMode ? 'Edit Appointment' : 'Create Appointment' }}</h2>
 
 <mat-dialog-content>
     <mat-form-field class="full-width">
